--- a/Mymobileproject/pom.xml
+++ b/Mymobileproject/pom.xml
@@ -44,6 +44,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
