--- a/Mymobileproject/pom.xml
+++ b/Mymobileproject/pom.xml
@@ -5,15 +5,16 @@
 	<groupId>Mymobileproject</groupId>
 	<artifactId>mobile</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<name>mobile</name>
+	<packaging>war</packaging>
+	<name>Mobileclinician</name>
+    
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
+	<finalName>MobileClinician</finalName>
 		<plugins>
 			<!-- Compiler plug-in -->
 			
@@ -29,7 +30,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
+					<warSourceDirectory>target</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
