--- a/Mymobileproject/pom.xml
+++ b/Mymobileproject/pom.xml
@@ -8,6 +8,8 @@
 	<packaging>war</packaging>
 	<name>Mobileclinician</name>
     
+    
+      
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -60,6 +62,24 @@
 		</plugins>
 	</build>
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.0.0</version>
+</dependency>
+<dependency>
+     <groupId>io.qameta.allure</groupId>
+     <artifactId>allure-testng</artifactId>
+     <version>2.12.0</version>
+</dependency>
+	
+	
+	<dependency>
+        <groupId>com.github.2gis.winium</groupId>
+        <artifactId>winium-webdriver</artifactId>
+        <version>0.1.0-1</version>
+    </dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
