--- a/Mymobileproject/pom.xml
+++ b/Mymobileproject/pom.xml
@@ -7,27 +7,22 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Mobileclinician</name>
-    
-    
-      
+
+
+
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
-	<finalName>MobileClinician</finalName>
+		<finalName>MobileClinician</finalName>
 		<plugins>
 			<!-- Compiler plug-in -->
-			
-			<!-- <plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>  -->
+
+			<!-- <plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.1</version> 
+				<configuration> <source>1.7</source> <target>1.7</target> </configuration> 
+				</plugin> -->
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
@@ -37,7 +32,7 @@
 				</configuration>
 			</plugin>
 
-			 <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -45,8 +40,8 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin> 
-			
+			</plugin>
+
 			<!-- Below plug-in is used to execute tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -62,24 +57,24 @@
 		</plugins>
 	</build>
 	<dependencies>
-	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-<dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>3.0.0</version>
-</dependency>
-<dependency>
-     <groupId>io.qameta.allure</groupId>
-     <artifactId>allure-testng</artifactId>
-     <version>2.12.0</version>
-</dependency>
-	
-	
-	<dependency>
-        <groupId>com.github.2gis.winium</groupId>
-        <artifactId>winium-webdriver</artifactId>
-        <version>0.1.0-1</version>
-    </dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.github.2gis.winium</groupId>
+			<artifactId>winium-webdriver</artifactId>
+			<version>0.1.0-1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
