--- a/Mymobileproject/pom.xml
+++ b/Mymobileproject/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -45,11 +46,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<suiteXmlFiles>
+					<!-- <suiteXmlFiles>
 					
-						<!-- TestNG suite XML files -->
+						TestNG suite XML files
 						<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
+					</suiteXmlFiles> -->
 				</configuration>
 			</plugin>
 		</plugins>
@@ -75,3 +76,4 @@
 		</dependency>
 	</dependencies>
 </project>
+
